crates/haneul/tests/snapshots/shell_tests__with_network__chain_id_caching__multiple_commands_cache_chain_id.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/with_network/chain_id_caching/multiple_commands_cache_chain_id.sh
---
----- script -----
#!/usr/bin/env bash
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# Test that various client commands all properly cache chain_id

echo "=== Initial state ==="
if grep -q "chain_id:" $CONFIG 2>&1; then
    echo "chain_id field exists: YES"
else
    echo "chain_id field exists: NO"
fi

echo ""
echo "=== Testing objects command ==="
haneul client --client.config $CONFIG objects > output.txt 2>&1
echo "Command executed"

echo ""
echo "=== Config state after objects ==="
if grep -q "chain_id:" $CONFIG 2>&1; then
    echo "chain_id field exists: YES"
    grep "chain_id:" $CONFIG | sed 's/chain_id: .*/chain_id: <REDACTED>/'
else
    echo "chain_id field exists: NO"
fi

echo ""
echo "=== Testing gas command ==="
haneul client --client.config $CONFIG gas > output.txt 2>&1
echo "Command executed"

echo ""
echo "=== Config state after gas ==="
if grep -q "chain_id:" $CONFIG 2>&1; then
    echo "chain_id field exists: YES"
    grep "chain_id:" $CONFIG | sed 's/chain_id: .*/chain_id: <REDACTED>/'
else
    echo "chain_id field exists: NO"
fi

echo ""
echo "=== Testing balance command ==="
haneul client --client.config $CONFIG balance > output.txt 2>&1
echo "Command executed"

echo ""
echo "=== Final config state ==="
if grep -q "chain_id:" $CONFIG 2>&1; then
    echo "chain_id field exists: YES"
    grep "chain_id:" $CONFIG | sed 's/chain_id: .*/chain_id: <REDACTED>/'
else
    echo "chain_id field exists: NO"
fi

----- results -----
success: true
exit_code: 0
----- stdout -----
=== Initial state ===
chain_id field exists: NO

=== Testing objects command ===
Command executed

=== Config state after objects ===
chain_id field exists: YES
    chain_id: <REDACTED>

=== Testing gas command ===
Command executed

=== Config state after gas ===
chain_id field exists: YES
    chain_id: <REDACTED>

=== Testing balance command ===
Command executed

=== Final config state ===
chain_id field exists: YES
    chain_id: <REDACTED>

----- stderr -----
